css/style.css
/* ... */
  .fade-in {
    display: block;
    padding-left: 0px;
    text-align: left;
    margin: 0px;
    padding-bottom:20px;
    padding-right: 10px;
    width:100%;
    font-size: 1.3em;
    color: #BFBFBF;
    font-family: Book Antiqua;

    animation: fadeIn ease 20s;
    -webkit-animation: fadeIn ease 20s;
    -moz-animation: fadeIn ease 20s;
    -o-animation: fadeIn ease 20s;
    -ms-animation: fadeIn ease 20s;

  }
  @keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }

  @-moz-keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }

  @-webkit-keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }

  @-o-keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }

  @-ms-keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
  }



  .color_scheme_input_instructions{
    display: block;
    font-family: Book Antiqua;
    font-size: 1.3em;
    text-align: left;

  }

  .web_search_change_header{
    font-family: Book Antiqua;
    display: block;
    text-align: center;
    /*border-bottom:1.5px solid #808080;*/
    max-width: 70%;
    font-weight:bold;
    background-color:;
    /*padding-right: 20px;*/
    /*margin-right: 20px;*/
  }


  .csi_color_change_header{
    font-family: Book Antiqua;
    display: block;
    text-align: center;
    /*border-bottom:1.5px solid #808080;*/
    max-width: 70%;
    font-weight:bold;
    background-color:;
    /*padding-right: 20px;*/
    /*margin-right: 20px;*/
  }

  .left_dock_input_class{
    padding-bottom:20px;
    margin-bottom: 50px;
    display: block;
    border: 1.5px solid #808080;
    color: #BFBFBF;
    width:90%;
  }

  .left_dock_input_instructions{
    display: block;
    padding-left: 0px;
    text-align: left;
    margin: 0px;
    padding-bottom:0px;
    padding-right: 10px;
    width:100%;
    font-size: 1.3em;
    color: #BFBFBF;
    font-family: Book Antiqua;
    /*border:1px solid white;*/
  }


  .ldi-column-a{
    width: 10px;
    text-align: center;
    /*border:1px solid white;*/
    font-size: 1.0em;
  }

  .ldi-column-b{
    /*border:1px solid yellow;*/
    /*width:175px;*/
    max-width: 175px;
    width:30%;
    padding-left:0px;
  }

  .ldi-column-c{
    /*border:1px solid purple;*/
    max-width:350px;
    width:50%;
    /*padding-left:10px;*/
  }

  .finished_button{
    display: block;
    z-index: 5;
    letter-spacing:.5px;
    text-align: center;
    /*margin-top:15px;*/
    margin-top:0px;
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 1.4em;
    font-family: Book Antiqua;
    border: 1.5px solid #808080;
    width:105px;
    -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;

  }

  .submit_button{
    display: block;
    letter-spacing:.5px;
    text-align: center;
    /*margin-top:15px;*/
    margin-top:0px;
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 1.1em;
    font-family: Book Antiqua;
    border: 1.5px solid #808080;
    width:105px;
    -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
  }

  /*############################################*/

  .parallelogram_lowercase_selected{

    position: absolute;
    /*margin-top:-18px;*/
    top: -19px;
    bottom:-1.5px;
    left:4px;
    padding:0px;
    width: 90px;
    height: 20px;
    transform: skew(-20deg);
    background: #BFBFBF;
    color: #242424;
    border-left:1.5px solid #BFBFBF;
    border-right:1.5px solid #BFBFBF;
    border-top:1px solid #BFBFBF;
    font-weight: bold;
    /* code below makes it so text is not selectable */
    -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
  }

  .parallelogram_lowercase_unselected{
    position: absolute;
    top: -19px;
    /*margin-top:-18px;*/
    left:4px;
    padding:0px;
    width: 90px;
    height: 20px;
    transform: skew(-20deg);
    background: #242424;
    color: #808080;  
    border-bottom:1.5px solid #808080;
    font-weight: bold;
    /* code below makes it so text is not selectable */
    -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
  }

  .parallelogram_UPPERCASE_selected{
    position: absolute;
    /*margin-top:-18px;*/
    left:4px;
    padding:0px;
    width: 110px;
    height: 20px;
    transform: skew(-20deg);
    border-left:1.5px solid #BFBFBF;
    border-right:1.5px solid #BFBFBF;
    border-top:1px solid #BFBFBF;
    background: #BFBFBF;
    color: #242424;
    font-weight: bold;
    /* code below makes it so text is not selectable */
    -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
  }
  .parallelogram_UPPERCASE_unselected{
    bottom:-1.5px;
    position: absolute;
    top: -19px;
    /*margin-top:-18px;*/
    left:4px;
    padding:0px;
    width: 110px;
    height: 20px;
    transform: skew(-20deg);
    border-bottom:1.5px solid #808080;
    background: #242424;
    color: #808080;
    font-weight: bold;
    /* code below makes it so text is not selectable */
    -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
  }



  .swatches{
    position:relative;
    padding-left: 2.5px;
    /*padding-left: 1.5px;*/
    /*height:90%;*/
    z-index: 3;
    -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
  }
/* ... */

